kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sikshanepal-deployment
  namespace: sikshanepal

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sikshanepal

  template:
    metadata:
      labels:
        app: sikshanepal

    spec:
      containers:
        - name: sikshanepal

          image: nischaldev31/sikshanepal:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
