kubernetes/django-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sikshanepal-service
  namespace: sikshanepal

spec:
  selector:
    app: sikshanepal

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
