kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: sikshanepal

spec:
  selector:
    app: postgres

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

  type: ClusterIP
